--- a/src/styles.css
+++ b/src/styles.css
@@ -45,5 +45,33 @@ justify-content: center;
 .paragraph-body{
     display: flex;
     width: 50%;
-    padding-top: 1em;
+    padding: 1em;
+}
+
+.burgers,
+.sides,
+.drinks {
+    width: 60%;
+    padding: 0.5em;
+    border-radius: 8px;
+}
+
+.burgers h3,
+.sides h3,
+.drinks h3 {
+    margin-bottom: 0.5em;
+    font-size: 1.2em;
+    text-align: center;
+}
+
+.burgers div,
+.sides div,
+.drinks div {
+    padding: 0.3em;
+    text-align: center;
+    margin: 0.2em 0;
+    background-color: white;
+    border: 1px solid #ccc;
+    border-radius: 6px;
+    box-shadow: 1px 1px 2px rgba(0,0,0,0.1);
 }
