--- a/src/styles.css
+++ b/src/styles.css
@@ -31,11 +31,11 @@ justify-content: center;
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding-top: 2em;
+    padding-top: 1em;
 }
 
 .headline{
-    padding-bottom: 1em;
+    /* padding-bottom: 1em; */
 }
 
 .content-body > img{
