--- a/src/styles.css
+++ b/src/styles.css
@@ -42,10 +42,17 @@ justify-content: center;
     border: solid;
 }
 
+.paragraph-container{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 10px 0px;
+}
+
 .paragraph-body{
     display: flex;
-    width: 50%;
-    padding: 1em;
+    width: 60%;
+    padding: 10px;
 }
 
 .burgers,
@@ -74,4 +81,11 @@ justify-content: center;
     border: 1px solid #ccc;
     border-radius: 6px;
     box-shadow: 1px 1px 2px rgba(0,0,0,0.1);
+}
+
+button{
+    border: solid 3px grey;
+    border-radius: 10px;
+    width: 250px;
+    height: 35px
 }
